--- a/index.html
+++ b/index.html
@@ -67,6 +67,44 @@
 	<div class="container-fluid">
 	<div class="row clearfix">
 		<div class="col-md-12">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			  </ol>
+
+			  <!-- Wrapper for slides -->
+			  <div class="carousel-inner" role="listbox">
+				<div class="item active">
+				  <img src="img/cover.png" alt="...">
+				  <div class="carousel-caption">
+					<h2>Gran Juego</h2>
+					<p>Si lo puedes pensar, lo puedes programar!!!</p>
+					<button class="btn btn-default" type="submit" data-toggle="modal" data-target=".modal1">Informacion</button>
+					<button class="btn btn-default" type="submit">Conocelo</button>
+				  </div>
+				</div>
+				<div class="item">
+				  <img src="img/cover.png" alt="...">
+				  <div class="carousel-caption">
+					...
+				  </div>
+				</div>
+				...
+			  </div>
+
+			  <!-- Controls -->
+			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			  </a>
+			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			  </a>
+			</div>			
 		</div>
 	</div>
 	<div class="row clearfix">
@@ -85,7 +123,14 @@
 	</div>
 </div>
 
-
+/*modales*/
+<div class="modal fade bs-example-modal-sm modal1" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
 
 
 	<script src="js/jquery-3.1.1.js"></script>
